# UnityRuntimeExplorer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: FUNDING.yml
mod/config/: mod_config.h
mod/explorer/: explorer_model.cpp  explorer_model.h  explorer_ui.cpp  explorer_ui.h  method_tracer.cpp  method_tracer.h
mod/hooks/: mod_hooks.cpp  mod_hooks.h  render_imgui_hook.h  unity_log_hook.h
mod/lifecycle/: mod_network.cpp  mod_network.h  mod_runtime.cpp  mod_runtime.h
mod/support/: mod_log.cpp  mod_log.h
mod/ui/: highlight.h  localization.h  menu.h  theme.h  widgets.h
mod/ui/tabs/: about_tab.h  config_tab.h
sdk/: coroutines.h  events.h  hook_api.h  mod_async.h  mod_sdk.h  network_api.h  runtime_api.h  runtime_bootstrap.h
sdk/il2cpp/: README.md  il2cpp_helpers.h  il2cpp_runtime.h
sdk/unity/: unity.h  unity_components.h  unity_inspect.h  unity_invoke.h  unity_shortcuts.h  unity_types.h
tests/: explorer_safety_tests.cpp
